fix: reject invalid ping parameters without aborting startup